# mc-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.agent  Dockerfile.bot  README.md  TODO.md  calibrate.py  config.json  docker-compose.yml  pyproject.toml
agent/: CLAUDE.md  agent.py  context_builder.py  coordinator_service.py  dashboard.html  dashboard.py  executor.py  exploration_memory.py  history_db.py  logger.py  plan_utils.py  task_memory.py
agent/bot/: CLAUDE.md  activity.js  bridge.js  buried.js  chest.js  combat.js  commands.js  crafting.js  eating.js  equipment.js  explore.js  fishing.js  food_collect.js  hazards.js  home.js  hunting.js  index.js  inventory.js  logger.js  mining.js  mode.js  movement_prefs.js  package-lock.json  package.json  smelting.js  surface.js  watchdog.js  water.js  woodcutting.js  world.js
agent/brain/: __init__.py  base.py  gemini.py  ollama.py  openai_client.py  rate_limiter.py  vertex.py
agent/skills/: CLAUDE.md  __init__.py  activity_done.py  activity_stuck.py  command_validation.py  commands_ref.py  coordinator.py  craft_decision.py  fishing.py  food.py  inventory.py  llm_response.py  planner.py  respawn.py  self_task.py  state_summary.py  task_arbitration.py  tool_durability.py
agent/skills/stuck/: __init__.py  decision.py  getfood.py  hunting.py  llm_utils.py  mining.py  prompt_builder.py  prompts.py  smelting.py
fishing_tool/: agent.py  config.py  cv.py  vision.py
test/: test_history_db.py  test_llm_response.py  test_planner.py  test_self_task.py
training/: inspect_dataset.py  prepare_datasets.py  remap_labels.py  run_training.py  test_model.py  train.py
training/dataset_configs/: minecraft_object_finder_v2.py  minecraft_t6a7p_v1.py  mixed_mobs_hu5i5_v3.py  mob_detection_v10.py  passive_mobs_v10.py  skeleton_bxhmb_v3.py  spider_e48rl_v1.py  topicos_ii_v1.py  zombie_moyl8_v2.py
