[project]
name = "mc-agent"
version = "0.1.0"
description = "Minecraft bot agent with LLM-driven decision making"
requires-python = ">=3.10,<3.13"
dependencies = [
  "websockets>=16.0",
  "python-dotenv>=1.2.2",
  "google-genai>=1.0.0",
  "ollama>=0.6.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]

[tool.uv]
package = false
