[project]
name = "mc-agent"
version = "0.1.0"
description = "Minecraft bot agent with LLM-driven decision making"
requires-python = ">=3.10,<3.13"
dependencies = [
  "websockets>=16.0",
  "python-dotenv>=1.2.2",
  "google-genai>=1.0.0",
  "ollama>=0.6.1",
  "aiohttp>=3.13.5",
  "pydantic>=2.0",
  "openai>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
